Fix Role of interest and Experience dropdown alignment

--- a/src/pages/CareersApplyPage.css
+++ b/src/pages/CareersApplyPage.css
@@ -176,8 +176,31 @@
 
 .careers-apply__form input,
 .careers-apply__form select {
+  box-sizing: border-box;
+  height: 50px;
   min-height: 50px;
   padding: 0 0.9rem;
+}
+
+.careers-apply__form select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding-right: 2.6rem;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2.2' stroke='%2315233c'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.5 8.25l-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.9rem center;
+  background-size: 1.1rem;
+  cursor: pointer;
+}
+
+.careers-apply__form select:invalid {
+  color: #778399;
+}
+
+.careers-apply__form select option {
+  color: #15233c;
+  background: #ffffff;
 }
 
 .careers-apply__form textarea {
